<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/starView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="1"
        android:contentDescription="@string/starimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/ballView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0"
        android:contentDescription="@string/ballimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ball" />

    <ImageButton
        android:id="@+id/starButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/starbutton"
        android:onClick="toStar"
        android:scaleType="fitCenter"
        android:src="@drawable/star_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ballButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ballbutton"
        android:onClick="toBall"
        android:scaleType="fitCenter"
        android:src="@drawable/ball_circle"
        app:layout_constraintEnd_toEndOf="@+id/starButton"
        app:layout_constraintTop_toBottomOf="@+id/starButton" />

    <Button
        android:id="@+id/spinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:onClick="spin"
        android:text="@string/spin"
        app:layout_constraintBottom_toBottomOf="@+id/turnButton"
        app:layout_constraintEnd_toStartOf="@+id/turnButton"
        app:layout_constraintTop_toTopOf="@+id/turnButton" />

    <Button
        android:id="@+id/turnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="turnAround"
        android:text="@string/turn_around"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jumpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="jump"
        android:text="@string/jump"
        app:layout_constraintBottom_toBottomOf="@+id/turnButton"
        app:layout_constraintStart_toEndOf="@+id/turnButton"
        app:layout_constraintTop_toTopOf="@+id/turnButton" />

    <Button
        android:id="@+id/clapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="clap"
        android:text="@string/clap"
        app:layout_constraintBottom_toTopOf="@+id/turnButton"
        app:layout_constraintEnd_toEndOf="@+id/turnButton"
        app:layout_constraintStart_toStartOf="@+id/turnButton" />

    <Button
        android:id="@+id/nodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="nod"
        android:text="@string/nod"
        app:layout_constraintBottom_toBottomOf="@+id/clapButton"
        app:layout_constraintStart_toEndOf="@+id/clapButton"
        app:layout_constraintTop_toTopOf="@+id/clapButton" />

    <Button
        android:id="@+id/stretchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:onClick="stretch"
        android:text="@string/stretch"
        app:layout_constraintBottom_toBottomOf="@+id/clapButton"
        app:layout_constraintEnd_toStartOf="@+id/clapButton"
        app:layout_constraintTop_toTopOf="@+id/clapButton" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="360dp"
        android:layout_height="202.5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>